2017-04-10  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (reconfigure): remove MainMenu
	instantiation after ogre reconfiguration to avoid issue while
	reconfiguration in LocalTest.

	* src/client/LocalTest.cpp (keyPressed): return false to enable
	GmeEngine key bindings.

	* src/client/LocalTest.cpp (enter): call loadLayout now in a
	try/catch block.

2017-04-09  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/WaitingCircle.hpp (visible): implement visibility
	and show()/hide() functions.

	* src/client/WaitingCircle.cpp (update): called from LocalTest.

	* src/client/WaitingCircle.cpp (updateBuffer): draw the first image of
	the animation.

2017-04-08  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LocalTest.cpp (enter): testing with StaticImage.
	* ext/librlgl: updated to head.

	* src/client/AnimatedImage.cpp (AnimatedImage): prerender all images
	in goemetry buffer vector.

	* src/client/AnimatedImage.cpp (updateSelf): implement update callback.

2017-04-06  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/AnimatedImage.cpp (debug): add a logging function to
	know why the image drawing isn't working.

	* src/client/AnimatedImage.cpp (AnimatedImage): resize the image
	vector fix a segfault.

2017-04-05  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/AnimatedImage.cpp (drawSelf): start to implement the
	drawing.
	* src/client/AnimatedImage.hpp (AnimatedImage): start a new class.
	* src/client/LocalTest.hpp (_LOCAL_TEST_HPP_): fix a typo in guards.

2017-04-04  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LocalTest.cpp (addWorld): add an helper function.
	* src/client/LocalTest.hpp (lbWorlds): add a global pointer to
	existing worlds listbox.

	* src/client/LocalTest.cpp (onSelectionChange): call check() to
	update Play button.
	* src/client/LocalTest.cpp (check): add a selection brush image.

2017-04-03  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LocalTest.cpp (check): add a list box item.
